fix: close button is covered by profile

--- a/Frontend/src/app/main/navigation/main-menu-sidebar/main-menu-sidebar.component.scss
+++ b/Frontend/src/app/main/navigation/main-menu-sidebar/main-menu-sidebar.component.scss
@@ -36,7 +36,7 @@ $licenseInfoHeight: 40px;
             overflow: hidden;
             @include unselectableText();
             > .profile {
-                z-index: 2;
+                z-index: 1;
                 left: 0;
                 width: 100%;
                 text-align: center;
